log
Thu 25 Apr 2024 02:17:05 AM UTC: 
 tests:  0|6
total_score: 0/70
267a31f
Thu 25 Apr 2024 05:45:44 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3aa1f4
Thu 25 Apr 2024 06:03:04 PM UTC: 
 hashmap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
f491fa4
Thu 25 Apr 2024 06:12:56 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
2931090
Sat 27 Apr 2024 09:55:15 PM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
05579ef
Sat 27 Apr 2024 09:59:16 PM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
5cf5235
Sat 27 Apr 2024 10:05:04 PM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘enlarge’:
hashmap.c:71:21: error: ‘old_capacity’ is used uninitialized [-Werror=uninitialized]
   71 |   map->capacity = 2 * old_capacity;
      |                   ~~^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ab5dc97
Sat 27 Apr 2024 10:05:37 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
bc949ea
